Changed homepage name in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio-website-1",
-  "homepage": "hkothari1.github.io",
+  "homepage": "https://hkothari1.github.io/react-portfolio-website-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
